2003-08-13  J. Brobecker  <brobecker@gnat.com>

	* config/pa/tm-hppa64.h (HPUX_1100): Remove, not used.
	(ADDR_BITS_REMOVE): Remove, redundant.

2003-08-13  J. Brobecker  <brobecker@gnat.com>

	* hppa-tdep.c (hppa_gdbarch_init): Set the addr_bits_remove
	gdbarch method to clear the 2 low bits of text addresses.

2003-08-12  Andrew Cagney  <cagney@redhat.com>

	* Makefile.in (dsrec.o): Update dependencies.
	* dsrec.c: Include "gdb_assert.h".
	(make_srec): Use snprintf instead of sprintf, use a literal format
	string.

2003-08-12  Andrew Cagney  <cagney@redhat.com>

	* frame.c (deprecated_frame_xmalloc): Use XMALLOC, instead of
	FRAME_OBSTACK_ZALLOC.

2003-08-12  Kevin Buettner  <kevinb@redhat.com>

	* i386-tdep.c (i386_gdbarch_init): Enable default support for
	SSE registers.

2003-08-10  Mark Kettenis  <kettenis@gnu.org>

	* x86-64-tdep.h (amd64fbsd_sigtramp_start, amd64fbsd_sigtramp_end,
	amd64fbsd_sc_reg_offset): Add extern declarations.
	* amd64fbsd-nat.c (_initialize_am64fbsd_nat): Remove extern
	declarations.

2003-08-11  Ben Elliston  <bje@wasabisystems.com>

	* MAINTAINERS (write after approval): Update my mail address.

2003-08-10  Andrew Cagney  <cagney@redhat.com>

	* Makefile.in (monitor.o): Do not build monitor.c with -Werror.

2003-08-10  Mark Kettenis  <kettenis@gnu.org>

	* i386-tdep.h (i386fbsd_sigtramp_start, i386fbsd_sigtramp_end,
	i386obsd_sigtramp_start, i386obsd_sigtramp_end,
	i386fbsd4_sc_reg_offset, i386fbsd_sc_reg_offset,
	i386nbsd_sc_reg_offset, i386obsd_sc_reg_offset,
	i386bsd_sc_reg_offset): Add extern declarations.
	* i386obsd-nat.c: Include "i386-tdep.h"
	(_initialize_i386obsd_nat): Remove extern declarations.
	* i386fbsd-nat.c (_initialize_i386fbsd_nat): Remove extern
	declarations.
	* i386bsd-nat.c (_initialize_i386bsd_nat): Remove extern
	declarations.

	* i386-tdep.c (i386_register_to_value): Use get_frame_register
	instead of frame_read_register.
	(i386_fetch_pointer_argument): Use get_frame_register_unsigned